# taxlaw-kg

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: frontend-architect.md
docs/: LightRAG-上传流程分析.md  LightRAG深度解读.md  Phase1-技术验证方案.md  税务法规知识库PRD.md  税务法规知识库开发设计文档.md
phase1_verification/: .env.example  01_lightrag_basic.py  02_qwen_llm.py  03_neo4j_basic.py  04_lightrag_full_integration.py  05_custom_schema_extraction.py  06_full_pipeline_demo.py  README.md  REPORT_TEMPLATE.md  pyproject.toml
taxlaw-kg/backend/: .env.example  pyproject.toml  requirements.txt
taxlaw-kg/backend/app/: __init__.py  config.py  database.py  main.py
taxlaw-kg/backend/app/api/: deps.py
taxlaw-kg/backend/app/api/v1/: auth.py  documents.py  graph.py  query.py  router.py  schema.py
taxlaw-kg/backend/app/core/: exceptions.py  security.py
taxlaw-kg/backend/app/schemas/: document.py  graph.py  schema.py  user.py
taxlaw-kg/backend/app/services/: lightrag_service.py
taxlaw-kg/backend/app/utils/: file_parser.py
taxlaw-kg/frontend/: index.html  package-lock.json  package.json  tsconfig.json
taxlaw-kg/frontend/src/: main.ts
taxlaw-kg/frontend/src/api/: index.ts  request.ts
taxlaw-kg/frontend/src/composables/: useGraph.ts
taxlaw-kg/frontend/src/pages/: Dashboard.vue  Documents.vue  Graph.vue  Layout.vue  Query.vue  Schema.vue
taxlaw-kg/frontend/src/pages/Auth/: Login.vue
taxlaw-kg/frontend/src/router/: index.ts
taxlaw-kg/frontend/src/stores/: auth.ts
